508 contrast issues

--- a/apps/sam-design-system-site/src/styles.scss
+++ b/apps/sam-design-system-site/src/styles.scss
@@ -151,3 +151,7 @@ $cdk-overlay-dark-backdrop-background: rgba(14, 52, 88, 0.7);
 .usa-input--error {
     border-width: .1rem;
 }
+
+.mat-calendar-table-header {
+  color: black !important;
+}
